tecno_2eso.html

--- a/tecno_2eso.html
+++ b/tecno_2eso.html
@@ -523,7 +523,7 @@ function toggleGoogleTranslateWidget() {
 <div class="iDevice emphasis0" >
 <div id="ta10_120_2" class="block iDevice_content">
 <div class="exe-text"><p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;">01.- El Método de Proyectos.</span></p>
-<p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;"><a href="01.- Dibujo Técnico. Vistas y perspectivas.  02.- Dibujo Técnico. Acotación.  03.- CAD. LibreCAD.  04.- CAD. TinkerCAD." target="_blank" rel="noopener">02.- Dibujo Técnico. Representación de objetos.</a></span></p>
+<p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;"><a href="https://beniteach.github.io/vistasISO/vistas_normalizadas.html" target="_blank" rel="noopener">02.- Dibujo Técnico. Representación de objetos.</a></span></p>
 <p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;">03.- Elaborar un presupuesto.</span><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;"> </span></p>
 <p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;">04.- CAD. TinkerCAD.</span></p></div>
 </div>
