--- a/tecno_3eso.html
+++ b/tecno_3eso.html
@@ -524,7 +524,7 @@ function toggleGoogleTranslateWidget() {
 <div id="ta8_128_2" class="block iDevice_content">
 <div class="exe-text"><p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;"><a href="https://beniteach.github.io/vistasISO/index.html" target="_blank" rel="noopener">01.- Dibujo Técnico. Vistas y perspectivas.</a></span></p>
 <p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;"><a href="https://beniteach.github.io/acotacionESO/index.html" target="_blank" rel="noopener">02.- Dibujo Técnico. Acotación.</a></span></p>
-<p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;"><a href="https://beniteach.github.io/librecad1/index.html" target="_blank" rel="noopener">03.- CAD. LibreCAD.</a></span></p>
+<p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;"><a href="https://beniteach.github.io/librecad/index.html" target="_blank" rel="noopener">03.- CAD. LibreCAD.</a></span></p>
 <p><span style="font-size: 12pt; font-family: verdana, geneva, sans-serif;">04.- CAD. TinkerCAD.</span></p>
 <p></p></div>
 </div>
